--- a/cadastro.html
+++ b/cadastro.html
@@ -13,7 +13,12 @@
 
     <section id="contentCadastro">
 
-        <img width="100" height="100" src="https://img.icons8.com/quill/100/cbe012/money-bag-franc.png" alt="money-bag-franc"/>
+        <div class="menu">
+            <img class="ogo" width="50" height="50" src="https://img.icons8.com/glyph-neue/50/cbe012/koi-fish.png" alt="money-bag-franc"/>
+            <img class="hamb" width="30" height="30" src="https://img.icons8.com/ios-filled/50/cbe012/menu--v1.png" alt="menu--v1"/>
+        </div>
+       
+
         <p class="txtTitle white">Cadastro de Despesas</p>
 
 
